# FBA-Bench-core

./: .bumpver.toml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .towncrier.toml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  VALIDATION.md  docker-compose.yml  index.html  leaderboard.html  pyproject.toml  research.html  robots.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
agent_runners/: registry.py
assets/press/: README.md  brand-colors.md  brand-guidelines.md
baseline_bots/: __init__.py  bot_factory.py  claude_sonnet_bot.py  gpt4o_mini_bot.py  gpt_3_5_bot.py  gpt_4o_mini_bot.py  greedy_script_bot.py  grok_4_bot.py  openrouter_bot.py
data/: leaderboard_tier_1.json
docs/: CODE_OF_CONDUCT.md  README.md  architecture.md  fba_bench_ship_guide.md  legacy_src_inventory.txt  migration-guide.md  quickstart.md  rescue_log.md  rescue_snapshot.md
docs/architecture/: core-contracts.md
docs/community/: README.md
docs/paper/: README.md
golden_masters/golden_run_baseline/golden_run_baseline_20250831-032918/: summary.json
golden_masters/golden_run_baseline/golden_run_baseline_20250831-033251/: summary.json
golden_masters/golden_run_baseline/golden_run_baseline_20250831-181242/: experiment_config.yaml  run_1.json
golden_masters/golden_run_baseline/golden_run_baseline_20250831-234823/: run_1.json
golden_masters/golden_run_baseline/golden_run_baseline_20250831-234907/: run_1.json  summary.json
golden_masters/tier_0/: .gitkeep
golden_masters/tier_1/: .gitkeep
golden_masters/tier_2/: .gitkeep
newsfragments/: .gitkeep
schemas/: leaderboard_schema.json  scenario_schema.json
scripts/: add-license-header.py  build_assets.py  inject-config.sh  smoke_import.py  validate_all.py  validate_golden_masters.py  validate_scenarios.py
site/: 404.html  config.js  index.html  leaderboard.html  press.html  research.html  robots.txt  sitemap.xml
site/assets/press/: README.md  brand-typography.md
site/data/: leaderboard.json  leaderboard_tier_1.json
src/agents/: __init__.py  advanced_agent.py  base.py  cognitive_config.py  hierarchical_planner.py  multi_domain_controller.py  registry.py  skill_config.py  skill_coordinator.py
src/agents/baseline/: baseline_agent_v1.py
src/agents/configs/: gpt5_learning_cognitive.yaml
src/agents/coordination/: __init__.py  coordination.py  crisis.py  models.py  performance.py  resources.py
src/agents/planning/: __init__.py  events.py  generation.py  models.py  utils.py  validation.py
src/agents/skill_modules/: __init__.py  base.py  base_skill.py  calculator.py  customer_service.py  extract_fields.py  financial_analyst.py  lookup.py  marketing_manager.py  product_sourcing.py  registry.py  summarize.py  supply_manager.py  transform_text.py
src/agents/skills/: __init__.py  conflicts.py  dispatch.py  metrics.py  models.py  resources.py  utils.py
src/benchmarking/: __init__.py
src/benchmarking/agents/: __init__.py  base.py  registry.py  unified_agent.py
src/benchmarking/config/: __init__.py  manager.py  pydantic_config.py  schema.py  schema_manager.py
src/config/: __init__.py  model_config.py
src/fba_bench_core/: __init__.py  config.py
src/models/: __init__.py  competitor.py  product.py  sales_result.py
src/reproducibility/: README.md  __init__.py  ci_integration.py  event_snapshots.py  golden_master.py  llm_cache.py  reproducibility_config.py  sim_seed.py  simulation_modes.py
src/scenarios/: README.md  __init__.py  curriculum_validator.py  dynamic_generator.py  multi_agent_coordinator.py  scenario_config.py  scenario_engine.py  scenario_framework.py  scenario_generator.py  tier_0_baseline.yaml  tier_1_moderate.yaml  tier_2_advanced.yaml  tier_2_product_sourcing.yaml  tier_3_expert.yaml  tier_manager.py
tests/: __init__.py  test_core_contracts.py
tests/agents/: test_config.py
tests/benchmarking/: test_engine_unit.py  test_metrics_unit.py  test_scenarios_unit.py  test_validators_unit.py
tests/domain/: test_events.py  test_models.py
tests/integration/: test_business_rules.py
(+131 files in other folders)
