[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fba-bench-core"
version = "0.1.0"
description = "Core library for FBA-Bench"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "FBA Team", email = "devnull@example.com" }
]
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "pre-commit"
]
docs = [
  "sphinx",
  "sphinx-rtd-theme"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fba_bench_core*"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]
select = ["E", "F", "I"]
extend-select = ["UP"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]