[tool.poetry]
name = "fba-bench-core"
version = "1.0.0"
description = "Core interfaces, data models, and events for the FBA-Bench simulation platform."
authors = ["FBA Team <devnull@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fba_bench_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = ["py311"]
line-length = 88
src = ["src"]
select = ["E", "F", "I"]
extend-select = ["UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]