[tool.poetry]
name = "fba-bench-core"
version = "1.0.0"
description = "Core interfaces, data models, and events for the FBA-Bench simulation platform."
authors = ["FBA Team <devnull@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fba_bench_core", from = "src"}]
keywords = ["benchmarking", "simulation", "fba", "pydantic", "typing"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/your-org/fba-bench-core"
Repository = "https://github.com/your-org/fba-bench-core"
Documentation = "https://your-org.github.io/fba-bench-core"
Issues = "https://github.com/your-org/fba-bench-core/issues"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
poetry-dynamic-versioning = "^0.19.0"
towncrier = "^21.0.0"
bumpver = "^2023.1128"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
# Enable Git-tag driven dynamic versioning for reproducible SemVer releases.
enable = true
vcs = "git"
fallback-version = "0.0.0"

[tool.towncrier]
# towncrier will collect news fragments from `newsfragments/` and build CHANGELOG.md
package = "fba_bench_core"
directory = "newsfragments"
filename = "CHANGELOG.md"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = ["py311"]
line-length = 88
src = ["src"]
select = ["E", "F", "I"]
extend-select = ["UP"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true
files = ["src/fba_bench_core", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]